[package]
name = "sock5"
version = "0.1.0"
authors = ["Zachary Wang <jimages123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.4"
byteorder = "1"